--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'   // retrofit2.converter.gson.GsonConverterFactory
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'          //io.reactivex.android.schedulers.AndroidSchedulers
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'  //retrofit2.adapter.rxjava2.RxJava2CallAdapterFactory
+
 }
