--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.shakefeedback"
+        applicationId "com.fenqile.shakefeedback"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
